--- a/experimental/file_server_on_linux/fsclient/Makefile.am
+++ b/experimental/file_server_on_linux/fsclient/Makefile.am
@@ -3,6 +3,11 @@ fsclient_CXXFLAGS = -DON_LINUX -g -Wall -O3 -I../src
 fsclient_SOURCES = main.cpp\
 ../src/Message.cpp\
 ../src/Message.h\
+../src/SocketMessage.cpp\
+../src/SocketMessage.h\
 ../src/ProcessUtil.cpp\
 ../src/ProcessUtil.h\
-../src/types.h
+../src/types.h\
+../src/monapi/messages.h\
+../src/cmemoryinfo.cpp
+
