--- a/experimental/mones2.1/Makefile
+++ b/experimental/mones2.1/Makefile
@@ -1,5 +1,6 @@
 TARGET  = mns21
-SOURCES = main.cpp Nic.cpp NicFactory.cpp IPStack.cpp NicServer.cpp MonAMDpcn.cpp LoopBack.cpp NE2000.cpp 
+SOURCES = main.cpp Nic.cpp NicFactory.cpp IPStack.cpp NetServer.cpp \
+ MonAMDpcn.cpp LoopBack.cpp NE2000.cpp NetClient.cpp
 INSTDIR = $(BINDIR)/APPS
 
 SHAREDIR   = $(MONADIR)/share
