--- a/experimental/file_server_on_linux/fsclient/Makefile.am
+++ b/experimental/file_server_on_linux/fsclient/Makefile.am
@@ -1,6 +1,7 @@
 bin_PROGRAMS = fsclient
 fsclient_CXXFLAGS = -DON_LINUX -g -Wall -O3 -I../src
 fsclient_SOURCES = main.cpp\
+../src/messages.cpp\
 ../src/Message.cpp\
 ../src/Message.h\
 ../src/SocketMessage.cpp\
