--- a/experimental/mones2.1/client/Makefile
+++ b/experimental/mones2.1/client/Makefile
@@ -1,7 +1,6 @@
-#$Id$
-TARGET  = mns21
-SOURCES = main.cpp Nic.cpp IPStack.cpp NetServer.cpp \
- MonAMDpcn.cpp LoopBack.cpp NE2000.cpp
+#$Id: Makefile 3230 2006-05-30 13:48:50Z eds1275 $
+TARGET  = client
+SOURCES = NetClient.cpp
 INSTDIR = $(BINDIR)/APPS
 
 SHAREDIR   = $(MONADIR)/share
@@ -14,16 +13,8 @@ INCLUDE += -idirafter .
 .cpp.o:
 	$(CXX) -c -o $@ $(CXXFLAGS) $(INCLUDE) $<
 
-.SUFFIXES: .c .o
-.c.o:
-	$(CC) -c -o $@ $(CFLAGS) $(INCLUDE) $<
-
-.SUFFIXES: .asm .o
-.asm.o:
-	$(NASM) $(NFLAGS) -o $@ $<
-
 all: $(TARGET).EX5
-	cd client && make 
+
 $(TARGET).EX5: $(TARGET).EXE
 	bim2bin in:$< out:$@ -osacmp -tek5 BS:0 eprm:z0
 
@@ -34,18 +25,9 @@ $(TARGET).EXE: $(OBJECTS) $(LINKDEP)
 install: all
 	mkdir -p $(INSTDIR)
 	$(INSTALL) $(TARGET).EX5 $(INSTFILES) $(INSTDIR)
-	cd client && make install
-run: install
-	cd $(MONADIR)/tool/mkimg && make && $(MONADIR)/tool/mkimg/run.bat
-runl: install
-	cd $(MONADIR)/tool/mkimg && make && $(MONADIR)/tool/mkimg/runl.bat
-runq: install
-	cd $(MONADIR)/tool/mkimg && make && cp mona.iso $(QEMUDIR)
-	cd $(QEMUDIR) && $(QEMUDIR)/mona.bat	
 clean:
 	rm -f $(OBJECTS) $(TARGET).EXE $(TARGET).EX5 $(CLEANFILES) $(TARGET).map
 	rm -f ${MONADIR}/bin/mona.img dependencies
-	cd client && make clean
 
 depend dependencies:
 ifneq ($(SOURCES),)
@@ -58,7 +40,7 @@ ifneq ($(NASMSRCS),)
 	for asm in $(NASMSRCS); do echo `echo $$asm | sed "s/\.asm/.o/`": "$$asm >> dependencies; done
 endif
 
-ADDLINK +=  -lPci -lmonalibc
+ADDLINK += -lmonalibc
 
 CXXFLAGS += -DDEBUG
 
