--- a/experimental/file_server_on_linux/src/Makefile.am
+++ b/experimental/file_server_on_linux/src/Makefile.am
@@ -18,5 +18,7 @@ main.cpp\
 types.h\
 vnode.h\
 vnode.cpp\
+VnodeManager.h\
+VnodeManager.cpp\
 ISO9660/ISO9660FileSystem.cpp\
 ISO9660/ISO9660FileSystem.h
