--- a/experimental/file_server_on_linux/src/Makefile.in
+++ b/experimental/file_server_on_linux/src/Makefile.in
@@ -54,7 +54,7 @@ am_file_server_OBJECTS = file_server-IDEDriver.$(OBJEXT) \
 	file_server-SocketMessage.$(OBJEXT) \
 	file_server-cmemoryinfo.$(OBJEXT) \
 	file_server-ProcessUtil.$(OBJEXT) file_server-main.$(OBJEXT) \
-	file_server-vnode.$(OBJEXT) \
+	file_server-vnode.$(OBJEXT) file_server-VnodeManager.$(OBJEXT) \
 	file_server-ISO9660FileSystem.$(OBJEXT)
 file_server_OBJECTS = $(am_file_server_OBJECTS)
 file_server_LDADD = $(LDADD)
@@ -171,6 +171,8 @@ main.cpp\
 types.h\
 vnode.h\
 vnode.cpp\
+VnodeManager.h\
+VnodeManager.cpp\
 ISO9660/ISO9660FileSystem.cpp\
 ISO9660/ISO9660FileSystem.h
 
@@ -299,6 +301,12 @@ file_server-vnode.o: vnode.cpp
 
 file_server-vnode.obj: vnode.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(file_server_CXXFLAGS) $(CXXFLAGS) -c -o file_server-vnode.obj `if test -f 'vnode.cpp'; then $(CYGPATH_W) 'vnode.cpp'; else $(CYGPATH_W) '$(srcdir)/vnode.cpp'; fi`
+
+file_server-VnodeManager.o: VnodeManager.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(file_server_CXXFLAGS) $(CXXFLAGS) -c -o file_server-VnodeManager.o `test -f 'VnodeManager.cpp' || echo '$(srcdir)/'`VnodeManager.cpp
+
+file_server-VnodeManager.obj: VnodeManager.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(file_server_CXXFLAGS) $(CXXFLAGS) -c -o file_server-VnodeManager.obj `if test -f 'VnodeManager.cpp'; then $(CYGPATH_W) 'VnodeManager.cpp'; else $(CYGPATH_W) '$(srcdir)/VnodeManager.cpp'; fi`
 
 file_server-ISO9660FileSystem.o: ISO9660/ISO9660FileSystem.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(file_server_CXXFLAGS) $(CXXFLAGS) -c -o file_server-ISO9660FileSystem.o `test -f 'ISO9660/ISO9660FileSystem.cpp' || echo '$(srcdir)/'`ISO9660/ISO9660FileSystem.cpp
