--- a/experimental/file_server_on_linux/Makefile.in
+++ b/experimental/file_server_on_linux/Makefile.in
@@ -148,7 +148,7 @@ sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
-SUBDIRS = src
+SUBDIRS = src test
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
 
